--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.96</div>
+    <div class="header-version nowrap">0.0.97</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1169,6 +1169,7 @@ a.pseudo</pre>
 .unclickable
 .upper
 .lower
+.cap - capitalize
 .nowrap
 .hyphens
 .pointer    | cursor pointer
@@ -2045,6 +2046,8 @@ a.pseudo</pre>
       <code>data</code> — объект (ключ: значение), массив или строка.<br>
       Каждая ошибка будет выведена с новой строки (разделены <code>&lt;br/&gt;</code>).
     </p>
+    <h4><code class="fs16">async render(selector, data, placement = null)</code></h4>
+    <h4><code class="fs16">[x-render]  |  Render JavaScript in 'x-render' attribute</code></h4>
   </div>
 
 
