--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.97</div>
+    <div class="header-version nowrap">0.0.98</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1169,7 +1169,7 @@ a.pseudo</pre>
 .unclickable
 .upper
 .lower
-.cap - capitalize
+.capitalize
 .nowrap
 .hyphens
 .pointer    | cursor pointer
