--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.2</div>
+    <div class="header-version nowrap">0.1.3</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -916,7 +916,9 @@ a.link_wavy</pre>
 --link-color-hover: var(--link-color);
 --link-color-visited: var(--link-color);
 --link-decoration-line: underline;
+--link-decoration-line-hover: var(--link-decoration-line-hover, var(--link-decoration-line));
 --link-decoration-style: solid;
+--link-decoration-style-hover: var(--link-decoration-style-hover, var(--link-decoration-style));
 --link-decoration-thickness: .06em;
 --link-decoration-color: color-mix(in srgb, currentcolor, transparent 75%);
 --link-decoration-color-hover: currentcolor;
