--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.5</div>
+    <div class="header-version nowrap">0.1.6</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -911,19 +911,19 @@ a.link_wavy</pre>
     <h3>Variables</h3>
     <pre class="fs14 mono">
 --link-color: #0060bb;
+--link-decoration-line: underline;
+--link-decoration-style: solid;
 
 <span class="op4">/* Additional variables and their default values: */</span>
 --link-color-hover: var(--link-color);
 --link-color-visited: var(--link-color);
---link-decoration-line: underline;
 --link-decoration-line-hover: var(--link-decoration-line-hover, var(--link-decoration-line));
---link-decoration-style: solid;
 --link-decoration-style-hover: var(--link-decoration-style-hover, var(--link-decoration-style));
 --link-decoration-thickness: .06em;
 --link-decoration-color: color-mix(in srgb, currentcolor, transparent 75%);
 --link-decoration-color-hover: currentcolor;
 --link-decoration-color-visited: currentcolor;
---link-underline-offset: .2em;
+--link-underline-offset: .25em;
 --link-transition: all .1s ease-out;</pre>
   </div>
   
@@ -1199,6 +1199,7 @@ a.link_wavy</pre>
     
     <h3>Elements</h3>
     <pre class="fs14 mono">
+.antialiased
 .container
 .unselectable
 .unclickable
