--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.21</div>
+    <div class="header-version nowrap">0.1.22</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -176,7 +176,7 @@
           <div>Custom logic</div>
           <div class="my2">
             <select class="max80" name="exampleSelect">
-              <option value="1">One</option>
+              <option value="1">Oneeeeeee</option>
               <option value="2">Two</option>
               <option value="3">Three</option>
             </select> →
