--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.32</div>
+    <div class="header-version nowrap">0.1.33</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -35,8 +35,7 @@
     "end": "-100px",
     "functionName": "element3",
     "class": "active",
-    "classRemove": true,
-    "log": true
+    "classRemove": true
   }'>
     <div class="element3-figure"></div>
   </div>
