--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.40</div>
+    <div class="header-version nowrap">0.1.41</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -630,22 +630,22 @@
           </style>
           <div x-sheets class="sheets-example unselectable">
             <div class="flex gap2">
-              <a class="button sheet-tab active" x-sheet="sheetA">Bird</a>
-              <a class="button sheet-tab" x-sheet="sheetB">Sea</a>
+              <a class="button active" x-sheet-open="sheetA">Bird</a>
+              <a class="button" x-sheet-open="sheetB">Sea</a>
             </div>
             <div class="mt3">
-              <div id="sheetA" class="sheet-body">Once I saw a little bird outside my window. It was chirping happily and looking for food. I put some seeds on the windowsill, and it ate them right away.</div>
-              <div id="sheetB" class="sheet-body">Once I saw a ship on the sea. It was sailing smoothly and leaving a trail in the water. The sun was setting, making the scene even more beautiful.
+              <div x-sheet="sheetA">Once I saw a little bird outside my window. It was chirping happily and looking for food. I put some seeds on the windowsill, and it ate them right away.</div>
+              <div x-sheet="sheetB">Once I saw a ship on the sea. It was sailing smoothly and leaving a trail in the water. The sun was setting, making the scene even more beautiful.
                 
                 
                 <div x-sheets class="sheets-example mt3">
                   <div class="flex gap2">
-                    <a class="button sheet-tab active" x-sheet="sheetA1">Bird</a>
-                    <a class="button sheet-tab" x-sheet="sheetB1">Sea</a>
+                    <a class="button active" x-sheet-open="sheetA1">Bird</a>
+                    <a class="button" x-sheet-open="sheetB1">Sea</a>
                   </div>
                   <div class="mt3">
-                    <div id="sheetA1" class="sheet-body">Once I saw a little bird outside my window. It was chirping happily and looking for food. I put some seeds on the windowsill, and it ate them right away.</div>
-                    <div id="sheetB1" class="sheet-body">Once I saw a ship on the sea. It was sailing smoothly and leaving a trail in the water. The sun was setting, making the scene even more beautiful.</div>
+                    <div x-sheet="sheetA1">Once I saw a little bird outside my window. It was chirping happily and looking for food. I put some seeds on the windowsill, and it ate them right away.</div>
+                    <div x-sheet="sheetB1">Once I saw a ship on the sea. It was sailing smoothly and leaving a trail in the water. The sun was setting, making the scene even more beautiful.</div>
                   </div>
                 </div>
               </div>
@@ -653,12 +653,12 @@
           </div>
           <div x-sheets class="mt3 flex aic gap2 sheets-example">
             <div class="flex gap2">
-              <a class="button sheet-tab active" x-sheet="sheetHappy">Happy</a>
-              <a class="button sheet-tab" x-sheet="sheetSad">Sad</a>
+              <a class="button active" x-sheet-open="sheetHappy">Happy</a>
+              <a class="button" x-sheet-open="sheetSad">Sad</a>
             </div>
             <div class="fs30">
-              <div id="sheetHappy" class="sheet-body">🙂</div>
-              <div id="sheetSad" class="sheet-body">😕</div>
+              <div x-sheet="sheetHappy">🙂</div>
+              <div x-sheet="sheetSad">😕</div>
             </div>
           </div>
         </div>
@@ -1745,14 +1745,14 @@ a.link_wavy</pre>
       <p>Шаблон:</p>
       <div class="codeBlock">
         <code>&lt;div x-sheets&gt;</code>
-        <code>  &lt;a class="sheet-tab active" x-sheet="sheetA"&gt;Sheet&lt;/a&gt;</code>
-        <code>  &lt;a class="sheet-tab" x-sheet="sheetB"&gt;Sheet&lt;/a&gt;</code>
-        <code>  &lt;div id="sheetA" class="sheet-body active"&gt;Sheet content&lt;/div&gt;</code>
-        <code>  &lt;div id="sheetB" class="sheet-body"&gt;Sheet content&lt;/div&gt;</code>
+        <code>  &lt;a x-sheet-open="sheetA" class="active"&gt;Sheet&lt;/a&gt;</code>
+        <code>  &lt;a x-sheet-open="sheetB"&gt;Sheet&lt;/a&gt;</code>
+        <code>  &lt;div x-sheet="sheetA"&gt;Sheet content&lt;/div&gt;</code>
+        <code>  &lt;div x-sheet="sheetB"&gt;Sheet content&lt;/div&gt;</code>
         <code>&lt;/div&gt;</code>
       </div>
       <p>Первый таб в шаблоне активен по умолчанию, для этого добавлен класс <code>.active</code>.</p>
-      <p>Табы и их содержимое можно свободно вкладывать в другие теги в пределах <code>.sheets</code>.</p>
+      <p>Табы и их содержимое можно свободно вкладывать в другие теги в пределах <code>x-sheets</code>.</p>
     </div>
 
     <div id="modalSheetsApi" class="mt5">
@@ -1763,7 +1763,7 @@ a.link_wavy</pre>
           <th width="60%">Описание</th>
         </tr>
         <tr>
-          <td><code>x.sheets.show(id)</code></td>
+          <td><code>x.sheets.show(x-sheet)</code></td>
           <td>Показывает нужный таб</td>
         </tr>
       </table>
