--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.45</div>
+    <div class="header-version nowrap">0.1.46</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1459,12 +1459,12 @@ a.link_wavy</pre>
           <th width="60%">Значение по умолчанию</th>
         </tr>
         <tr>
-          <td><code>--modal-padding</code></td>
-          <td><code>50px</code></td>
+          <td><code>--modal-margin</code></td>
+          <td><code>3vw</code></td>
         </tr>
         <tr>
-          <td><code>--modal-padding-small</code></td>
-          <td><code>40px 6vw</code></td>
+          <td><code>--modal-padding</code></td>
+          <td><code>clamp(4rem, 4vw, 5rem) clamp(2.5rem, 4vw, 5rem)</code></td>
         </tr>
         <tr>
           <td><code>--modal-background</code></td>
@@ -1472,23 +1472,23 @@ a.link_wavy</pre>
         </tr>
         <tr>
           <td><code>--modal-box-shadow</code></td>
-          <td><code>0 10px 40px rgba(0,0,0,.25)</code></td>
+          <td><code>0 10px 40px #00000044</code></td>
         </tr>
         <tr>
           <td><code>--modal-border-radius</code></td>
-          <td><code>10px</code></td>
+          <td><code>1.6rem</code></td>
         </tr>
         <tr>
           <td><code>--modal-closer-area</code></td>
-          <td><code>40px</code></td>
+          <td><code>4rem</code></td>
         </tr>
         <tr>
           <td><code>--modal-closer-size</code></td>
-          <td><code>26px</code></td>
+          <td><code>2.6rem</code></td>
         </tr>
         <tr>
           <td><code>--modal-closer-width</code></td>
-          <td><code>2px</code></td>
+          <td><code>0.2rem</code></td>
         </tr>
         <tr>
           <td><code>--modal-closer-color</code></td>
@@ -1500,7 +1500,7 @@ a.link_wavy</pre>
         </tr>
         <tr>
           <td><code>--modal-overlay-background-color</code></td>
-          <td><code>rgba(0,0,0,.5)</code></td>
+          <td><code>#00000066</code></td>
         </tr>
       </table>
     </div>
