--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.51</div>
+    <div class="header-version nowrap">0.1.52</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -629,7 +629,7 @@
             }
           </style>
           <div x-sheets class="sheets-example unselectable">
-            <div class="flex gap2">
+            <div class="button_tabs">
               <a class="button active" x-sheet-open="sheetA">Bird</a>
               <a class="button" x-sheet-open="sheetB">Sea</a>
             </div>
@@ -639,8 +639,8 @@
                 
                 
                 <div x-sheets class="sheets-example mt3">
-                  <div class="flex gap2">
-                    <a class="button active" x-sheet-open="sheetA1">Bird</a>
+                  <div class="button_tabs">
+                    <a class="button" x-sheet-open="sheetA1">Bird</a>
                     <a class="button" x-sheet-open="sheetB1">Sea</a>
                   </div>
                   <div class="mt3">
@@ -652,7 +652,7 @@
             </div>
           </div>
           <div x-sheets class="mt3 flex aic gap2 sheets-example">
-            <div class="flex gap2">
+            <div class="button_tabs">
               <a class="button active" x-sheet-open="sheetHappy">Happy</a>
               <a class="button" x-sheet-open="sheetSad">Sad</a>
             </div>
