--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.52</div>
+    <div class="header-version nowrap">0.1.53</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1315,16 +1315,50 @@ a.link_wavy</pre>
     <pre class="fs14 mono">
 --container-max-width: 1600px;
 
---shadow-1:  0px 2px 6px #00000011;
---shadow-2:  0px 2px 6px #00000022;
---shadow-3:  0px 2px 6px #00000033;
---shadow-4:  2px 4px 12px #00000011;
---shadow-5:  2px 4px 12px #00000022;
---shadow-6:  2px 4px 12px #00000033;
---shadow-7:  2px 4px 20px #00000011;
---shadow-8:  2px 4px 20px #00000022;
---shadow-9:  2px 4px 20px #00000033;
---shadow-10: 2px 4px 24px #00000044;</pre>
+--shadow-1:  0 2px 4px #00000018;
+--shadow-2:  0 4px 8px #00000018;
+--shadow-3:  0 6px 12px #00000018;
+--shadow-4:  0 8px 16px #00000018;
+--shadow-5:  0 10px 20px #00000018;
+--shadow-6:  0 12px 24px #00000018;
+--shadow-7:  0 14px 28px #00000018;
+--shadow-8:  0 16px 32px #00000018;
+--shadow-9:  0 18px 36px #00000018;
+--shadow-10: 0 20px 40px #00000018;</pre>
+  
+    <h3>Shadows</h3>
+    <div class="grid g1 m:g2 l:g3 gap6">
+      <div class="c1 p6 r4 sh1">
+        --shadow-1
+      </div>
+      <div class="c1 p6 r4 sh2">
+        --shadow-2
+      </div>
+      <div class="c1 p6 r4 sh3">
+        --shadow-3
+      </div>
+      <div class="c1 p6 r4 sh4">
+        --shadow-4
+      </div>
+      <div class="c1 p6 r4 sh5">
+        --shadow-5
+      </div>
+      <div class="c1 p6 r4 sh6">
+        --shadow-6
+      </div>
+      <div class="c1 p6 r4 sh7">
+        --shadow-7
+      </div>
+      <div class="c1 p6 r4 sh8">
+        --shadow-8
+      </div>
+      <div class="c1 p6 r4 sh9">
+        --shadow-9
+      </div>
+      <div class="c1 p6 r4 sh10">
+        --shadow-10
+      </div>
+    </div>
   </div>
   
   
