--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.1.53</div>
+    <div class="header-version nowrap">0.1.54</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -42,6 +42,15 @@
 
   <section class="section-header mt8 px5 m:px6 l:px8" x-appear>
     <h1 class="mxa ac max800">Small and simple CSS & JavaScript library with interesting features</h1>
+    <div id="menu" class="mt4">
+      <a x-dropdown-open class="button">Menu</a>
+      <ul x-dropdown>
+        <li><a href="/admin/settings/profile/">Профиль</a></li>
+        <li><a href="/logout/">Выйти</a></li>
+        <li class="divider"></li>
+        <li><span class="op4">Version 0.5</span></li>
+      </ul>
+    </div>
   </section>
 
   <div class="element2" x-animate='{
