--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8 unselectable">
-    <div class="header-version nowrap">0.2.12</div>
+    <div class="header-version nowrap">0.2.13</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -43,7 +43,7 @@
   <section class="section-header mt8 px5 m:px6 l:px8" x-appear>
     <h1 class="mxa ac max800">Small and simple CSS & JavaScript library with interesting features</h1>
     <div id="menu" class="mt4">
-      <a x-dropdown-open class="button" aria-expanded="false" aria-controls="menu1">Menu</a>
+      <a x-dropdown-open class="button button_dropdown" aria-expanded="false" aria-controls="menu1">Menu</a>
       <ul x-dropdown id="menu1" role="menu" tabindex="-1">
         <li><a href="/admin/settings/profile/">Профиль</a></li>
         <li><a href="/logout/">Выйти</a></li>
