--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8 unselectable">
-    <div class="header-version nowrap">0.3.5</div>
+    <div class="header-version nowrap">0.3.6</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -46,7 +46,7 @@
     <div class="flex">
       <div class="mt4">
         <button x-dropdown-open class="button button_dropdown" tabindex="1">Menu left</button>
-        <ul x-dropdown role="menu" tabindex="-1">
+        <ul x-dropdown>
           <li><a href="/admin/settings/profile/">Профильное образование в педагогическом</a></li>
           <li><a href="/logout/">Выйти</a></li>
           <li class="divider"></li>
@@ -54,16 +54,19 @@
         </ul>
       </div>
       <div class="mt4 mxa">
-        <input x-dropdown-open type="text"/>
-        <ul x-dropdown id="test" role="menu" tabindex="-1">
+        <input x-dropdown-open type="text" tabindex="2"/>
+        <ul x-dropdown id="test">
+          <li><a onclick="alert('It works!')">Test it!</a></li>
+          <li><a onclick="alert('It works!')">Test it!</a></li>
+          <li><a onclick="alert('It works!')">Test it!</a></li>
           <li><a onclick="alert('It works!')">Test it!</a></li>
           <li><span class="op4">Начните вводить название города</span></li>
           <li><span class="op4">Загрузка...</span></li>
         </ul>
       </div>
       <div class="mt4">
-        <button x-dropdown-open class="button button_dropdown" tabindex="1">Menu right</button>
-        <ul x-dropdown role="menu" tabindex="-1">
+        <button x-dropdown-open class="button button_dropdown" tabindex="3">Menu right</button>
+        <ul x-dropdown>
           <li><a href="/admin/settings/profile/">Профиль</a></li>
           <li><a href="/logout/">Выйти</a></li>
           <li class="divider"></li>
@@ -2168,7 +2171,7 @@ a.link_wavy</pre>
   
   <div class="flex aic jcse m4">
     <div>
-      <button x-dropdown-open class="button button_dropdown" tabindex="1">Bottom menu</button>
+      <button x-dropdown-open class="button button_dropdown" tabindex="4">Bottom menu</button>
       <ul x-dropdown role="menu" tabindex="-1">
         <li><a href="/admin/settings/profile/">Профиль</a></li>
         <li><a href="/logout/">Выйти</a></li>
